--- a/config-data/recipe-service.yml
+++ b/config-data/recipe-service.yml
@@ -42,7 +42,7 @@ logging:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://registry-service:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 management:
   endpoints:
